# ad-copy-dashboard

./: .dockerignore  .gitignore  Dockerfile  api.yaml  nixpacks.toml  plan.md  pyproject.toml  railway.json
backend/: .gitignore  api.py  conn.py  db.py  migrate_checklist_team_id.py  migrate_exclusion.py  migrate_role.py  migrate_schema_name.py  migrate_user_prefs.py  pyproject.toml  requirements.txt  split_example_copies.py  update_example_copies.py
backend/ad_performance/: get_copy_type_performance.py  get_meta_performance.py  get_weekly_performance.py
backend/ai/: analyze_copy_type.py  check_similarity.py  gemini_client.py  generate_copy.py  regenerate_copy.py
backend/audit/: list_logs.py  log.py  migration.sql
backend/auth/: approve.py  list_users.py  login.py  me.py  register.py  update_role.py  update_user.py
backend/best_copies/: create_best.py  list_best.py
backend/checklists/: check_alive_ads.py  check_assignments.py  cleanup_child_checklists.py  daily_alive_check.py  get_stats.py  init_week.py  list_checklists.py  list_with_utm.py  update_checklist.py
backend/copies/: create_copy.py  delete_copy.py  get_copy.py  list_copies.py  update_copy.py
backend/copy_types/: create_copy_type.py  delete_copy_type.py  get_copy_type.py  list_copy_types.py  update_copy_type.py
backend/dashboard/: get_summary.py
backend/products/: create_product.py  delete_product.py  get_product.py  list_products.py  update_product.py
backend/team_products/: create_team_product.py  delete_team_product.py  get_team_products_by_team.py  list_team_products.py  (+1 more)
(+43 files in other folders)
